--- a/index.html
+++ b/index.html
@@ -412,14 +412,14 @@
   <footer class="bg-white border-t border-brand-border py-12 text-center">
     <div class="max-w-6xl mx-auto px-6">
         <p class="font-bold text-lg mb-2 tracking-tight">PENNIO<span class="text-brand-orange">.DESIGN</span></p>
-        <p class="text-sm text-neutral-500">&copy; 2025 PENNIO.DESIGN. Lagos, Nigeria.</p>
+        <p class="text-sm text-neutral-500">&copy; 2025 PENNIO.DESIGN. Nigeria.</p>
         
         <!-- Social Links (Fixed) -->
         <div class="flex justify-center gap-6 mt-6">
             <a href="https://instagram.com/pennio.design" target="_blank" rel="noopener noreferrer" class="text-neutral-400 hover:text-brand-orange transition-colors">
                 <i data-lucide="instagram" class="w-5 h-5"></i>
             </a>
-            <a href="https://www.linkedin.com/in/paul-oyatowo" target="_blank" rel="noopener noreferrer" class="text-neutral-400 hover:text-brand-orange transition-colors">
+            <a href="https://www.linkedin.com/in/pauloyatowo" target="_blank" rel="noopener noreferrer" class="text-neutral-400 hover:text-brand-orange transition-colors">
                 <i data-lucide="linkedin" class="w-5 h-5"></i>
             </a>
             <a href="https://twitter.com/penniodesign" target="_blank" rel="noopener noreferrer" class="text-neutral-400 hover:text-brand-orange transition-colors">
