--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         PENNIO<span class="text-brand-orange">.DESIGN</span>
       </a>
       <a href="#apply" class="px-4 py-2 bg-neutral-900 text-white text-sm font-medium rounded-lg hover:bg-brand-orange transition-colors">
-        Apply for the Sprint
+        Apply
       </a>
     </div>
   </nav>
@@ -93,49 +93,46 @@
   <section class="pt-32 pb-20 px-6 text-center max-w-4xl mx-auto">
     <div class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-orange-50 border border-orange-100 text-orange-700 text-xs font-semibold mb-6 uppercase tracking-wider">
       <span class="w-2 h-2 rounded-full bg-orange-500 animate-pulse"></span>
-      Only 3 Sprint Clients / Month
+      Only 3 Clients Per Month
     </div>
 
     <h1 class="text-4xl md:text-6xl font-bold tracking-tight mb-6">
-      We Help Service Brands<br />
-      <span class="text-brand-orange">Charge More & Close Faster</span><br />
-      in 30 Days.
+      We help service businesses<br />
+      <span class="text-brand-orange">look professional and charge more</span><br />
+      in 30 days.
     </h1>
 
     <p class="text-lg text-neutral-500 max-w-2xl mx-auto leading-relaxed">
-      A focused brand sprint that upgrades how you look, sound, and sell —
-      without long timelines or agency bloat.
+      If your business is good but people hesitate, doubt you, or argue about price,
+      your brand is the problem — not your service.
     </p>
 
     <p class="text-sm text-neutral-400 mt-4">
-      For consultants, service businesses & founders already selling.
+      For consultants and service businesses already selling.
     </p>
 
-    <div class="mt-10 flex justify-center">
+    <div class="mt-10">
       <a href="#apply" class="px-8 py-4 bg-neutral-900 text-white font-semibold rounded-lg hover:bg-brand-orange transition-colors">
-        See If You’re a Fit (2 mins)
+        Apply in 2 Minutes
       </a>
     </div>
   </section>
 
   <!-- PROBLEM -->
   <section class="py-20 px-6 max-w-5xl mx-auto">
-    <h2 class="text-3xl font-bold mb-6 text-center">
-      Your business isn’t the problem.
+    <h2 class="text-3xl font-bold mb-10 text-center">
+      Why good businesses still struggle
     </h2>
-    <p class="text-neutral-500 text-center max-w-3xl mx-auto mb-10">
-      Your brand is underperforming.
-    </p>
 
     <div class="grid md:grid-cols-3 gap-6 text-sm">
       <div class="bg-white border border-brand-border rounded-2xl p-6">
-        Prospects don’t get your value fast enough.
+        People don’t understand what you do fast enough.
       </div>
       <div class="bg-white border border-brand-border rounded-2xl p-6">
-        You face hesitation, ghosting, or price pushback.
+        You hear “let me think about it” too often.
       </div>
       <div class="bg-white border border-brand-border rounded-2xl p-6">
-        Your brand doesn’t match your ambition or pricing.
+        Your brand makes you look smaller than you really are.
       </div>
     </div>
   </section>
@@ -144,18 +141,27 @@
   <section class="py-20 px-6 bg-white border-t border-brand-border">
     <div class="max-w-5xl mx-auto text-center">
       <h2 class="text-3xl font-bold mb-4">
-        The Brand-to-Revenue Sprint™
+        The 30-Day Brand Upgrade
       </h2>
-      <p class="text-neutral-500 max-w-2xl mx-auto mb-10">
-        A 30-day, founder-led brand overhaul designed to increase trust,
-        pricing power, and conversion speed.
+
+      <p class="text-neutral-500 max-w-2xl mx-auto mb-12">
+        In 30 days, we fix how your business looks and explains itself —
+        so people trust you faster and stop fighting your price.
       </p>
 
       <div class="grid md:grid-cols-4 gap-6 text-sm">
-        <div class="border border-brand-border rounded-xl p-6">Discovery & Clarity</div>
-        <div class="border border-brand-border rounded-xl p-6">Positioning Strategy</div>
-        <div class="border border-brand-border rounded-xl p-6">Visual Identity</div>
-        <div class="border border-brand-border rounded-xl p-6">Launch-Ready Assets</div>
+        <div class="border border-brand-border rounded-xl p-6">
+          Understand your business clearly
+        </div>
+        <div class="border border-brand-border rounded-xl p-6">
+          Explain your value in simple words
+        </div>
+        <div class="border border-brand-border rounded-xl p-6">
+          Design a clean, professional look
+        </div>
+        <div class="border border-brand-border rounded-xl p-6">
+          Prepare things you can use immediately
+        </div>
       </div>
     </div>
   </section>
@@ -163,28 +169,32 @@
   <!-- WHAT YOU GET -->
   <section class="py-20 px-6 max-w-5xl mx-auto">
     <h2 class="text-3xl font-bold mb-10 text-center">
-      What You Get in 30 Days
+      What you get after 30 days
     </h2>
 
-    <ul class="space-y-4 max-w-xl mx-auto text-neutral-700">
-      <li>✔ Brand positioning & offer clarity</li>
-      <li>✔ Logo & visual identity system</li>
-      <li>✔ Conversion-focused brand guide</li>
-      <li>✔ Website hero, socials & pitch assets</li>
+    <ul class="space-y-4 max-w-xl mx-auto text-neutral-700 text-sm">
+      <li>✔ Clear message that explains your business</li>
+      <li>✔ Professional logo and brand look</li>
+      <li>✔ Simple brand guide to stay consistent</li>
+      <li>✔ Website and social media starting materials</li>
     </ul>
   </section>
 
-  <!-- INVESTMENT -->
+  <!-- PRICE -->
   <section class="py-20 px-6 bg-neutral-900 text-white text-center">
-    <h2 class="text-3xl font-bold mb-4">Investment</h2>
-    <p class="text-4xl font-bold mb-2">₦1.2M / $1,200</p>
+    <h2 class="text-3xl font-bold mb-4">Price</h2>
+
+    <p class="text-4xl font-bold mb-2">
+      ₦750,000 – ₦1,200,000
+    </p>
+
     <p class="text-neutral-400 mb-6">
-      One-time. Pays for itself with one client.
+      One-time payment. Most clients earn this back with one customer.
     </p>
 
     <p class="max-w-xl mx-auto text-sm text-neutral-300">
-      If you don’t feel more confident selling your offer after 30 days,
-      we keep working until you do.
+      If after 30 days you don’t feel more confident selling your service,
+      we keep working with you until you do.
     </p>
   </section>
 
@@ -192,50 +202,68 @@
   <section id="apply" class="py-24 px-6 bg-[#FAFAFA]">
     <div class="max-w-xl mx-auto bg-white border border-brand-border rounded-2xl p-8 shadow-card">
       <h2 class="text-2xl font-bold mb-2 text-center">
-        Apply for the Sprint
+        Apply for the 30-Day Brand Upgrade
       </h2>
+
       <p class="text-sm text-neutral-500 text-center mb-8">
-        This is a fit check — not everyone is accepted.
+        This helps us know if we’re a good fit.
       </p>
 
-      <form
+      <form id="applyForm"
         action="https://formsubmit.co/ea0da421e8e6e82457be40792262eeed"
         method="POST"
-        class="flex flex-col gap-5"
-      >
-        <input type="hidden" name="_subject" value="Sprint Application – PENNIO.DESIGN" />
+        class="flex flex-col gap-5">
+
+        <input type="hidden" name="_subject" value="New Brand Upgrade Application" />
         <input type="hidden" name="_captcha" value="false" />
 
-        <input required name="name" placeholder="Name"
+        <input required name="name" placeholder="Your name"
           class="px-4 py-3 rounded-lg border border-neutral-200" />
 
-        <input required name="email" type="email" placeholder="Email"
+        <input required name="email" type="email" placeholder="Your email"
           class="px-4 py-3 rounded-lg border border-neutral-200" />
 
-        <input required name="business" placeholder="What do you sell?"
+        <input required name="business" placeholder="What service do you offer?"
           class="px-4 py-3 rounded-lg border border-neutral-200" />
 
         <select required name="revenue"
           class="px-4 py-3 rounded-lg border border-neutral-200">
-          <option value="">Monthly revenue?</option>
-          <option>₦0–500k</option>
-          <option>₦500k–2M</option>
+          <option value="">Monthly revenue</option>
+          <option>₦0 – ₦500k</option>
+          <option>₦500k – ₦2M</option>
           <option>₦2M+</option>
         </select>
 
         <textarea required name="problem" rows="3"
-          placeholder="What’s broken in your brand right now?"
-          class="px-4 py-3 rounded-lg border border-neutral-200"></textarea>
+          placeholder="What is your biggest brand problem?"
+          class="px-4 py-3 rounded-lg border border-neutral-200 resize-none"></textarea>
 
         <button class="py-4 bg-brand-orange text-white font-bold rounded-lg hover:bg-orange-600">
-          Submit Application
+          Send Application
         </button>
       </form>
+
+      <div id="successMessage" class="hidden mt-6 p-6 bg-green-50 border border-green-200 rounded-xl text-center">
+        <h3 class="text-xl font-bold text-green-800 mb-2">Application Sent</h3>
+        <p class="text-green-700 text-sm">
+          If you’re a fit, you’ll hear from me within 24 hours.
+        </p>
+      </div>
     </div>
   </section>
 
   <script>
     lucide.createIcons();
+
+    const form = document.getElementById('applyForm');
+    const success = document.getElementById('successMessage');
+
+    form.addEventListener('submit', function () {
+      setTimeout(() => {
+        form.classList.add('hidden');
+        success.classList.remove('hidden');
+      }, 800);
+    });
   </script>
 
 </body>
