--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PENNIO.DESIGN – Build Your Brand</title>
+  <title>PENNIO.DESIGN – Upgrade Your Brand</title>
    
   <script src="https://cdn.tailwindcss.com"></script>
    
