--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Clarity Sprint (Beta) — PENNIO</title>
+  <title>PENNIO — Clarity Sprint (Beta)</title>
   <meta name="description" content="Fix your positioning and sales clarity in 2 weeks.">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
