--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Make Buyers Choose You | PENNIO</title>
+  <title>PENNIO — 30-Day Value Clarity Sprint</title>
   <meta name="description" content="I help service businesses stop losing deals by fixing how their value is communicated.">
 
   <!-- Fonts -->
