--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PENNIO — The Value Argument Overhaul</title>
+  <title>PENNIO — 30-Day Value Clarity Sprint</title>
   <meta name="description" content="Stop losing deals to cheaper competitors. A done-for-you positioning sprint for service businesses.">
 
   <!-- Fonts -->
@@ -79,13 +79,13 @@
 
   <!-- HERO -->
   <section id="hero" class="pt-44 pb-24 px-6 max-w-4xl mx-auto reveal-on-scroll">
-    <!-- Scarcity Badge -->
-    <div class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-neutral-100 border border-neutral-200 text-neutral-600 text-xs font-bold mb-8">
+    <!-- Scarcity Badge (FIXED: Less Aggressive) -->
+    <div class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-green-50 border border-green-200 text-green-700 text-xs font-bold mb-8">
       <span class="relative flex h-2 w-2">
-        <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-red-400 opacity-75"></span>
-        <span class="relative inline-flex rounded-full h-2 w-2 bg-red-500"></span>
+        <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-green-400 opacity-75"></span>
+        <span class="relative inline-flex rounded-full h-2 w-2 bg-green-500"></span>
       </span>
-      Beta Cohort: 2 of 3 spots claimed
+      Beta Cohort: Open for Applications
     </div>
 
     <h1 class="text-5xl md:text-7xl font-extrabold tracking-tight mb-8 text-neutral-900 leading-[1.05]">
@@ -93,7 +93,7 @@
     </h1>
 
     <p class="text-xl md:text-2xl text-neutral-600 mb-10 leading-relaxed max-w-2xl">
-      We install a <strong>Sales Argument</strong> that justifies your premium price so you can close more deals without "educating" the client. 
+      I install a <strong>Sales Argument</strong> that justifies your premium price so you can close more deals without "educating" the client. 
       <br><span class="text-sm text-neutral-400 font-medium mt-2 block">(Done-For-You in 30 Days.)</span>
     </p>
 
@@ -115,7 +115,7 @@
       </div>
       <div class="flex items-center gap-2">
         <i data-lucide="shield" class="w-5 h-5 text-blue-600"></i>
-        <span>No "Workshops". We do the work.</span>
+        <span>No "Workshops". I do the work.</span>
       </div>
     </div>
   </section>
@@ -137,7 +137,7 @@
 
       <div class="bg-neutral-800/50 border border-neutral-700 rounded-2xl p-8 md:p-12 transition-all duration-500 min-h-[300px] flex items-center" id="comparison-card">
         
-        <!-- Before State -->
+        <!-- Before State (FIXED: Increased Font Size) -->
         <div id="content-before" class="block w-full">
           <div class="flex items-center gap-3 mb-8 text-red-400 font-bold uppercase tracking-widest text-xs">
             <i data-lucide="alert-circle" class="w-4 h-4"></i> Current Reality
@@ -146,27 +146,27 @@
             <div class="space-y-6">
                 <div class="opacity-60">
                     <p class="text-xs text-neutral-500 uppercase font-bold mb-1">Your Pitch</p>
-                    <p class="text-lg">"We help companies grow..." (Vague)</p>
+                    <p class="text-lg md:text-xl">"We help companies grow..." (Vague)</p>
                 </div>
                 <div class="opacity-60">
                     <p class="text-xs text-neutral-500 uppercase font-bold mb-1">Client Reaction</p>
-                    <p class="text-lg text-red-300">"Why is it so expensive?"</p>
+                    <p class="text-lg md:text-xl text-red-300">"Why is it so expensive?"</p>
                 </div>
             </div>
             <div class="space-y-6">
                 <div class="opacity-60">
                     <p class="text-xs text-neutral-500 uppercase font-bold mb-1">The Process</p>
-                    <p class="text-lg">You chase them for weeks.</p>
+                    <p class="text-lg md:text-xl">You chase them for weeks.</p>
                 </div>
                 <div class="opacity-60">
                     <p class="text-xs text-neutral-500 uppercase font-bold mb-1">The Outcome</p>
-                    <p class="text-lg">You compete on <span class="underline decoration-red-500/50">Price</span>.</p>
+                    <p class="text-lg md:text-xl">You compete on <span class="underline decoration-red-500/50">Price</span>.</p>
                 </div>
             </div>
           </div>
         </div>
 
-        <!-- After State -->
+        <!-- After State (FIXED: Increased Font Size) -->
         <div id="content-after" class="hidden w-full">
           <div class="flex items-center gap-3 mb-8 text-green-400 font-bold uppercase tracking-widest text-xs">
             <i data-lucide="sparkles" class="w-4 h-4"></i> The PENNIO Protocol
@@ -175,21 +175,21 @@
             <div class="space-y-6">
                 <div>
                     <p class="text-xs text-neutral-500 uppercase font-bold mb-1">Your Pitch</p>
-                    <p class="text-lg font-bold text-white">"We solve [Specific Expensive Pain]."</p>
+                    <p class="text-lg md:text-xl font-bold text-white">"We solve [Specific Expensive Pain]."</p>
                 </div>
                 <div>
                     <p class="text-xs text-neutral-500 uppercase font-bold mb-1">Client Reaction</p>
-                    <p class="text-lg font-bold text-green-400">"How soon can we start?"</p>
+                    <p class="text-lg md:text-xl font-bold text-green-400">"How soon can we start?"</p>
                 </div>
             </div>
             <div class="space-y-6">
                 <div>
                     <p class="text-xs text-neutral-500 uppercase font-bold mb-1">The Process</p>
-                    <p class="text-lg font-bold text-white">They qualify themselves.</p>
+                    <p class="text-lg md:text-xl font-bold text-white">They qualify themselves.</p>
                 </div>
                 <div>
                     <p class="text-xs text-neutral-500 uppercase font-bold mb-1">The Outcome</p>
-                    <p class="text-lg font-bold text-white">You compete on <span class="underline decoration-brand-500">Value</span>.</p>
+                    <p class="text-lg md:text-xl font-bold text-white">You compete on <span class="underline decoration-brand-500">Value</span>.</p>
                 </div>
             </div>
           </div>
@@ -203,7 +203,7 @@
   <section id="process" class="py-24 px-6 reveal-on-scroll">
     <div class="max-w-3xl mx-auto">
       <div class="text-center mb-16">
-        <h2 class="text-3xl font-bold mb-4">We do the heavy lifting.</h2>
+        <h2 class="text-3xl font-bold mb-4">I do the heavy lifting.</h2>
         <p class="text-neutral-500">This isn't a workshop where I give you homework. It's an installation.</p>
       </div>
 
@@ -212,7 +212,7 @@
           <div class="text-4xl font-black text-neutral-100 group-hover:text-brand-100 transition-colors">01</div>
           <div>
             <h3 class="text-lg font-bold mb-2">The Extraction (Day 1)</h3>
-            <p class="text-neutral-600 text-sm">We get on a 60-minute call. I extract your expertise, your best case studies, and your "secret sauce." You dump your brain. I do the structuring.</p>
+            <p class="text-neutral-600 text-sm">We jump on a 60-minute call. I extract your expertise, your best case studies, and your "secret sauce." You dump your brain. I do the structuring.</p>
           </div>
         </div>
 
@@ -228,7 +228,7 @@
           <div class="text-4xl font-black text-neutral-100 group-hover:text-brand-100 transition-colors">03</div>
           <div>
             <h3 class="text-lg font-bold mb-2">The Asset Deployment (Day 30)</h3>
-            <p class="text-neutral-600 text-sm">We overhaul your core sales page or proposal template. You get a high-converting asset that speaks the new language. We don't stop until it converts.</p>
+            <p class="text-neutral-600 text-sm">I overhaul your core sales page or proposal template. You get a high-converting asset that speaks the new language. I don't stop until it converts.</p>
           </div>
         </div>
       </div>
@@ -248,8 +248,9 @@
         30 Days. <span class="text-brand-500">₦300,000.</span>
       </h2>
       
+      <!-- FIXED: Removed "I need you" language -->
       <p class="text-neutral-300 mb-10 max-w-xl mx-auto text-lg">
-        Standard pricing is ₦750k. You get 60% off because I need 3 case studies for this new specific protocol.
+        Standard pricing is ₦750k. This Beta cohort is ₦300k in exchange for feedback and a detailed testimonial.
       </p>
 
       <div class="bg-white/5 border border-white/10 rounded-2xl p-8 max-w-2xl mx-auto mb-10 text-left">
@@ -273,7 +274,7 @@
           <div>
             <strong class="block text-lg mb-1">The "Work Until It Works" Guarantee</strong>
             <p class="text-sm text-neutral-600 leading-snug">
-              If you don't feel <strong>100% confident</strong> that this new positioning justifies your price, we keep working for free until you do. No time limits. No extra cost.
+              If you don't feel <strong>100% confident</strong> that this new positioning justifies your price, I keep working for free until you do. No time limits. No extra cost.
             </p>
           </div>
         </div>
@@ -352,6 +353,17 @@
 
     </div>
   </section>
+
+  <!-- Sticky Footer for Mobile (Fixed Overlap) -->
+  <div id="sticky-bar" class="fixed bottom-0 w-full bg-white border-t border-neutral-200 p-4 z-50 transform translate-y-full transition-transform duration-300 md:hidden flex justify-between items-center shadow-[0_-4px_6px_-1px_rgba(0,0,0,0.1)]">
+    <div class="text-xs font-bold text-neutral-900">
+      <span class="w-2 h-2 bg-green-500 rounded-full inline-block mr-1"></span>
+      Limited spots
+    </div>
+    <a href="#apply" class="text-xs font-bold bg-neutral-900 text-white px-6 py-3 rounded hover:bg-brand-600 transition-colors">
+      Apply Now
+    </a>
+  </div>
 
   <footer class="py-10 text-center text-xs text-neutral-400 bg-neutral-900 border-t border-neutral-800">
     <p>&copy; 2025 PENNIO. Value Engineering for Service Businesses.</p>
@@ -451,6 +463,24 @@
     resetFormBtn.addEventListener('click', function() {
         success.classList.add('hidden');
         form.classList.remove('hidden');
+    });
+
+    // Sticky Bar Logic
+    const stickyBar = document.getElementById('sticky-bar');
+    const hero = document.getElementById('hero');
+    const applySection = document.getElementById('apply');
+
+    window.addEventListener('scroll', () => {
+      const applyRect = applySection.getBoundingClientRect();
+      const isApplyVisible = applyRect.top < window.innerHeight;
+      const pastHero = window.scrollY > hero.offsetHeight;
+
+      // FIXED: Hide bar if apply section is visible OR if we are at the very bottom
+      if (pastHero && !isApplyVisible && (window.innerHeight + window.scrollY) < document.body.offsetHeight - 50) {
+        stickyBar.classList.remove('translate-y-full');
+      } else {
+        stickyBar.classList.add('translate-y-full');
+      }
     });
   </script>
 </body>
