--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PENNIO — Authority Infrastructure for Service Businesses</title>
+  <title>PENNIO — The Authority Upgrade</title>
   <meta name="description" content="Engineer the Strategic Context that makes your premium pricing the only logical choice.">
 
   <!-- Fonts -->
@@ -152,7 +152,7 @@
         See The "Trust Gap"
       </a>
       <a href="#protocol" class="inline-flex justify-center items-center px-8 py-4 bg-white border border-neutral-200 text-neutral-700 font-bold text-base rounded-xl hover:bg-neutral-50 transition-all transform hover:-translate-y-1">
-        The System
+        The 30-Day System
       </a>
     </div>
   </section>
@@ -240,8 +240,8 @@
   <section id="protocol" class="py-24 px-6 reveal-on-scroll bg-neutral-50">
     <div class="max-w-5xl mx-auto">
       <div class="text-center mb-16">
-        <h2 class="text-3xl md:text-4xl font-extrabold mb-4 tracking-tight">The Authority System</h2>
-        <p class="text-neutral-500 text-lg">We don't "brainstorm." We build infrastructure.</p>
+        <h2 class="text-3xl md:text-4xl font-extrabold mb-4 tracking-tight">The 30-Day Authority System</h2>
+        <p class="text-neutral-500 text-lg">We don't "brainstorm." We build infrastructure. Fast enough to keep momentum, thorough enough to last.</p>
       </div>
 
       <div class="grid md:grid-cols-3 gap-6 relative">
@@ -252,7 +252,7 @@
         <div class="bg-white p-8 border border-neutral-200 rounded-2xl hover:border-brand-500 hover:shadow-xl transition-all group transform hover:-translate-y-2 duration-300">
           <div class="w-10 h-10 bg-neutral-900 text-white flex items-center justify-center font-bold text-lg mb-6 rounded-lg shadow-lg group-hover:scale-110 transition-transform">1</div>
           <h3 class="text-lg font-bold mb-2">Strategic Anchor</h3>
-          <p class="text-[10px] font-bold text-brand-600 uppercase mb-4 tracking-wider bg-brand-50 inline-block px-2 py-1 rounded">Days 1-3</p>
+          <p class="text-[10px] font-bold text-brand-600 uppercase mb-4 tracking-wider bg-brand-50 inline-block px-2 py-1 rounded">Week 1</p>
           <p class="text-neutral-600 text-sm leading-relaxed">
             We define your "Differentiated Value". Who are you? Why are you expensive? We extract the logic that justifies your fee before we draw a single pixel.
           </p>
@@ -262,7 +262,7 @@
         <div class="bg-white p-8 border border-neutral-200 rounded-2xl hover:border-brand-500 hover:shadow-xl transition-all group transform hover:-translate-y-2 duration-300 delay-100">
           <div class="w-10 h-10 bg-brand-600 text-white flex items-center justify-center font-bold text-lg mb-6 rounded-lg shadow-lg group-hover:scale-110 transition-transform">2</div>
           <h3 class="text-lg font-bold mb-2">Visual System</h3>
-          <p class="text-[10px] font-bold text-brand-600 uppercase mb-4 tracking-wider bg-brand-50 inline-block px-2 py-1 rounded">Days 4-10</p>
+          <p class="text-[10px] font-bold text-brand-600 uppercase mb-4 tracking-wider bg-brand-50 inline-block px-2 py-1 rounded">Weeks 2-3</p>
           <p class="text-neutral-600 text-sm leading-relaxed">
             I translate that value into a "Visual Language." Colors, typography, and layout that signal unquestionable Authority. It’s not art; it’s a uniform.
           </p>
@@ -272,7 +272,7 @@
         <div class="bg-white p-8 border border-neutral-200 rounded-2xl hover:border-brand-500 hover:shadow-xl transition-all group transform hover:-translate-y-2 duration-300 delay-200">
           <div class="w-10 h-10 bg-white border-2 border-neutral-900 text-neutral-900 flex items-center justify-center font-bold text-lg mb-6 rounded-lg shadow-lg group-hover:scale-110 transition-transform">3</div>
           <h3 class="text-lg font-bold mb-2">Conversion Environment</h3>
-          <p class="text-[10px] font-bold text-brand-600 uppercase mb-4 tracking-wider bg-brand-50 inline-block px-2 py-1 rounded">Days 11-14</p>
+          <p class="text-[10px] font-bold text-brand-600 uppercase mb-4 tracking-wider bg-brand-50 inline-block px-2 py-1 rounded">Week 4</p>
           <p class="text-neutral-600 text-sm leading-relaxed">
             We deploy this into a High-Converting Landing Page. This is the "Touchpoint" where the buyer makes the decision. It is engineered to close.
           </p>
@@ -342,7 +342,7 @@
   <!-- FAQ SECTION (Research Based) -->
   <section class="py-24 px-6 reveal-on-scroll bg-neutral-50">
     <div class="max-w-3xl mx-auto">
-        <h2 class="text-3xl font-extrabold mb-10 text-center tracking-tight">FAQ</h2>
+        <h2 class="text-3xl font-extrabold mb-10 text-center tracking-tight">Strategy FAQ</h2>
         
         <div class="space-y-4">
             <!-- Q1: Context/Positioning -->
@@ -360,12 +360,12 @@
             <!-- Q2: Value Equation (Speed/Ease) -->
             <details class="group bg-white border border-neutral-200 rounded-xl overflow-hidden transition-all duration-300 hover:shadow-md">
                 <summary class="flex justify-between items-center p-6 cursor-pointer font-bold text-neutral-800 hover:text-brand-600 transition-colors">
-                    Why is this a 14-day sprint? Can't we take our time?
+                    Why 30 days? Isn't that too fast for high-quality work?
                     <span class="transform transition-transform group-open:rotate-180 text-neutral-400"><i data-lucide="chevron-down" class="w-5 h-5"></i></span>
                 </summary>
                 <div class="px-6 pb-6 text-sm text-neutral-600 leading-relaxed border-t border-neutral-100 pt-4">
-                    <p class="mb-2">Speed is a feature, not a bug. Most branding projects die because they drag on for months, leading to "decision fatigue."</p>
-                    <p>By compressing the timeline, we force <strong>clarity</strong>. We focus only on the signals that actually drive revenue (Trust, Authority, Value) and ignore the fluff. You get a deployment-ready asset faster, which means you start closing deals faster.</p>
+                    <p class="mb-2">Traditional agencies take 3-6 months because they bill for time, not results. We bill for the asset.</p>
+                    <p>30 days is the perfect balance. It gives us one week for deep strategy, two weeks for rigorous visual systems, and one week for deployment. Any longer and we hit "decision fatigue." Any shorter and we skip critical thinking. We move with intentional velocity.</p>
                 </div>
             </details>
 
@@ -389,7 +389,7 @@
                 </summary>
                 <div class="px-6 pb-6 text-sm text-neutral-600 leading-relaxed border-t border-neutral-100 pt-4">
                     <p>Design is subjective; <strong>Conversion</strong> is objective.</p>
-                    <p>We build based on the "Strategic Anchor" we agree on in Day 1. However, our "Context Guarantee" protects you: if you don't genuinely believe the new system elevates your perceived value enough to raise your prices, we will keep iterating until it does.</p>
+                    <p>We build based on the "Strategic Anchor" we agree on in Week 1. However, our "Context Guarantee" protects you: if you don't genuinely believe the new system elevates your perceived value enough to raise your prices, we will keep iterating until it does.</p>
                 </div>
             </details>
         </div>
