--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
   <!-- FAQ SECTION (Research Based) -->
   <section class="py-24 px-6 reveal-on-scroll bg-neutral-50">
     <div class="max-w-3xl mx-auto">
-        <h2 class="text-3xl font-extrabold mb-10 text-center tracking-tight">Strategy FAQ</h2>
+        <h2 class="text-3xl font-extrabold mb-10 text-center tracking-tight">FAQ</h2>
         
         <div class="space-y-4">
             <!-- Q1: Context/Positioning -->
