--- a/os/index.html
+++ b/os/index.html
@@ -27,7 +27,7 @@
     -->
     <!-- CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
 </head>
-<body class="h-screen flex overflow-hidden">
+<body class="h-screen h-[100dvh] flex overflow-hidden">
 
     <!-- Sidebar Navigation -->
     <aside class="w-64 bg-white border-r border-gray-200 hidden md:flex flex-col flex-shrink-0 z-20">
@@ -94,7 +94,7 @@
         </div>
 
         <!-- Scrollable Content -->
-        <div id="content-container" class="flex-1 overflow-y-auto p-4 md:p-8">
+        <div id="content-container" class="flex-1 overflow-y-auto p-4 md:p-8 pb-32">
             <!-- Dynamic Content Injected Here -->
         </div>
 
