--- a/index.html
+++ b/index.html
@@ -374,34 +374,47 @@
       </div>
 
       <!-- Social Proof (Micro) - SPLIT -->
-      <div class="max-w-4xl mx-auto mt-20 grid md:grid-cols-2 gap-8">
+      <div class="max-w-4xl mx-auto mt-20">
+          <h3 class="text-center text-sm font-bold text-neutral-400 uppercase tracking-widest mb-8">Recent Client Transformations</h3>
           
-          <!-- Testimonial 1 -->
-          <div class="bg-white p-6 rounded-xl border border-neutral-100 shadow-sm hover:shadow-md transition-shadow">
-              <div class="flex items-center gap-3 mb-4">
-                  <div class="w-10 h-10 rounded-full bg-neutral-100 flex items-center justify-center text-xs font-bold">IO</div>
-                  <div>
-                      <div class="font-bold text-neutral-900 text-sm">Isaac Oni</div>
-                      <div class="text-xs text-neutral-500">Founder, Brilla.NG</div>
+          <div class="grid md:grid-cols-2 gap-8">
+              <!-- Testimonial 1 -->
+              <div class="bg-white p-6 rounded-xl border border-neutral-100 shadow-sm hover:shadow-md transition-shadow flex flex-col h-full">
+                  <div class="flex items-center gap-3 mb-4">
+                      <div class="w-10 h-10 rounded-full bg-neutral-100 flex items-center justify-center text-xs font-bold text-neutral-600">IO</div>
+                      <div>
+                          <div class="font-bold text-neutral-900 text-sm">Isaac Oni</div>
+                          <div class="text-xs text-neutral-500">Founder, Brilla.NG</div>
+                      </div>
+                  </div>
+                  <p class="text-neutral-600 italic text-sm leading-relaxed mb-6">
+                      "Paul rebuilt our positioning in 48 hours. The clarity he brought to our offer was the missing link we didn't know we needed."
+                  </p>
+                  <div class="mt-auto pt-4 border-t border-neutral-50">
+                      <a href="https://brilla.ng" target="_blank" class="text-xs font-bold text-brand-600 hover:text-brand-700 flex items-center gap-1 group">
+                          View Live Project <i data-lucide="arrow-up-right" class="w-3 h-3 transition-transform group-hover:translate-x-0.5 group-hover:-translate-y-0.5"></i>
+                      </a>
                   </div>
               </div>
-              <p class="text-neutral-600 italic text-sm leading-relaxed">
-                  "Paul rebuilt our positioning in 48 hours. The clarity he brought to our offer was the missing link we didn't know we needed."
-              </p>
-          </div>
 
-          <!-- Testimonial 2 -->
-          <div class="bg-white p-6 rounded-xl border border-neutral-100 shadow-sm hover:shadow-md transition-shadow">
-              <div class="flex items-center gap-3 mb-4">
-                  <div class="w-10 h-10 rounded-full bg-brand-50 text-brand-600 flex items-center justify-center text-xs font-bold">RA</div>
-                  <div>
-                      <div class="font-bold text-neutral-900 text-sm">Richard Adeoye</div>
-                      <div class="text-xs text-neutral-500">RichieReachDigitals</div>
+              <!-- Testimonial 2 -->
+              <div class="bg-white p-6 rounded-xl border border-neutral-100 shadow-sm hover:shadow-md transition-shadow flex flex-col h-full">
+                  <div class="flex items-center gap-3 mb-4">
+                      <div class="w-10 h-10 rounded-full bg-brand-50 text-brand-600 flex items-center justify-center text-xs font-bold">RA</div>
+                      <div>
+                          <div class="font-bold text-neutral-900 text-sm">Richard Adeoye</div>
+                          <div class="text-xs text-neutral-500">RichieReachDigitals</div>
+                      </div>
+                  </div>
+                  <p class="text-neutral-600 italic text-sm leading-relaxed mb-6">
+                      "We closed 2 deals the following week—both at our new premium price. The return on investment was immediate."
+                  </p>
+                  <div class="mt-auto pt-4 border-t border-neutral-50">
+                      <a href="https://pennio-design.github.io/richiereachdigitals" target="_blank" class="text-xs font-bold text-brand-600 hover:text-brand-700 flex items-center gap-1 group">
+                          View Live Project <i data-lucide="arrow-up-right" class="w-3 h-3 transition-transform group-hover:translate-x-0.5 group-hover:-translate-y-0.5"></i>
+                      </a>
                   </div>
               </div>
-              <p class="text-neutral-600 italic text-sm leading-relaxed">
-                  "We closed 2 deals the following week—both at our new premium price. The return on investment was immediate."
-              </p>
           </div>
 
       </div>
