--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <img 
             src="assets/images/illustrations/hero-strategy.svg" 
             alt="Strategic Digital Design Illustration" 
-            class="w-full max-w-md h-auto animate-float-slow hero-illustration relative z-10"
+            class="w-full max-w-md h-auto object-contain animate-float-slow hero-illustration relative z-10"
           >
           <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[120%] h-[120%] bg-brand-100/50 blur-[80px] rounded-full pointer-events-none -z-10 animate-pulse-slow"></div>
       </div>
@@ -127,21 +127,21 @@
           </div>
           <div class="space-y-12">
             <div class="flex gap-6 group items-start">
-              <img src="assets/images/illustrations/pillar-clarity.svg" alt="Clarity Illustration" class="w-16 h-16 illustration-spot flex-shrink-0">
+              <img src="assets/images/illustrations/pillar-clarity.svg" alt="Clarity Illustration" class="w-16 h-16 object-contain illustration-spot flex-shrink-0">
               <div>
                 <h3 class="text-xl font-bold mb-3 tracking-tight group-hover:text-brand-500 transition-colors">01. Clarity</h3>
                 <p class="text-neutral-400 leading-relaxed font-normal max-w-sm">If your prospect can't articulate your value in one sentence, you haven't explained it yet.</p>
               </div>
             </div>
             <div class="flex gap-6 group items-start">
-              <img src="assets/images/illustrations/pillar-credibility.svg" alt="Credibility Illustration" class="w-16 h-16 illustration-spot flex-shrink-0">
+              <img src="assets/images/illustrations/pillar-credibility.svg" alt="Credibility Illustration" class="w-16 h-16 object-contain illustration-spot flex-shrink-0">
               <div>
                 <h3 class="text-xl font-bold mb-3 tracking-tight group-hover:text-brand-500 transition-colors">02. Credibility</h3>
                 <p class="text-neutral-400 leading-relaxed font-normal max-w-sm">Authority is earned through precision. We replace generic claims with undeniable proof of expertise.</p>
               </div>
             </div>
             <div class="flex gap-6 group items-start">
-               <img src="assets/images/illustrations/pillar-conviction.svg" alt="Conviction Illustration" class="w-16 h-16 illustration-spot flex-shrink-0">
+               <img src="assets/images/illustrations/pillar-conviction.svg" alt="Conviction Illustration" class="w-16 h-16 object-contain illustration-spot flex-shrink-0">
               <div>
                 <h3 class="text-xl font-bold mb-3 tracking-tight group-hover:text-brand-500 transition-colors">03. Conviction</h3>
                 <p class="text-neutral-400 leading-relaxed font-normal max-w-sm">We don't sell features. We sell the inevitable outcome your clients are searching for.</p>
@@ -272,7 +272,7 @@
           <div class="absolute top-0 left-0 w-full h-1 bg-brand-500"></div>
           
           <div class="flex justify-center mb-8">
-             <img src="assets/images/illustrations/result-success.svg" alt="Success Illustration" class="w-48 h-48 animate-float-slow drop-shadow-[0_0_30px_rgba(249,115,22,0.3)]">
+             <img src="assets/images/illustrations/result-success.svg" alt="Success Illustration" class="w-48 h-48 object-contain animate-float-slow drop-shadow-[0_0_30px_rgba(249,115,22,0.3)]">
           </div>
           
           <h2 class="text-4xl font-black uppercase italic tracking-tighter mb-2">Simulation Complete</h2>
